--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: RDP
+name: Secure RDP with Auto-IP + Tailscale
 
 on:
   workflow_dispatch:
@@ -9,35 +9,25 @@ jobs:
     timeout-minutes: 3600
 
     steps:
-      - name: Configure Core RDP Settings
+      - name: Enable RDP
         run: |
-          # Enable Remote Desktop and disable Network Level Authentication (if needed)
+          # Enable RDP & basic settings
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-                             -Name "fDenyTSConnections" -Value 0 -Force
+              -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                             -Name "UserAuthentication" -Value 0 -Force
+              -Name "UserAuthentication" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                             -Name "SecurityLayer" -Value 0 -Force
-
-          # Remove any existing rule with the same name to avoid duplication
-          netsh advfirewall firewall delete rule name="RDP" 2>$null
-
-          # Allow incoming connections on port 3389 from any IP
-          netsh advfirewall firewall add rule name="RDP" `
-            dir=in action=allow protocol=TCP localport=3389
-
-          # (Optional) Restart the Remote Desktop service to ensure changes take effect
+              -Name "SecurityLayer" -Value 0 -Force
           Restart-Service -Name TermService -Force
 
       - name: Create RDP User with Secure Password
         run: |
           Add-Type -AssemblyName System.Security
           $charSet = @{
-              Upper = [char[]](65..90) # A-Z
-              Lower = [char[]](97..122) # a-z
-              Number = [char[]](48..57) # 0-9
-              Special = ([char[]](33..47) + [char[]](58..64) +
-                         [char[]](91..96) + [char[]](123..126)) # Special characters
+              Upper   = [char[]](65..90)
+              Lower   = [char[]](97..122)
+              Number  = [char[]](48..57)
+              Special = ([char[]](33..47) + [char[]](58..64) + [char[]](91..96) + [char[]](123..126))
           }
           $rawPassword = @()
           $rawPassword += $charSet.Upper | Get-Random -Count 4
@@ -46,72 +36,79 @@ jobs:
           $rawPassword += $charSet.Special | Get-Random -Count 4
           $password = -join ($rawPassword | Sort-Object { Get-Random })
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
-          Add-LocalGroupMember -Group "Administrators" -Member "RDP"
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
 
-          echo "RDP_USER=RDP" >> $env:GITHUB_ENV
-          echo "RDP_PASS=$password" >> $env:GITHUB_ENV
-
-          if (-not (Get-LocalUser -Name "RDP")) {
-              Write-Error "User creation failed"
-              exit 1
+          if (-not (Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue)) {
+              New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
+              Add-LocalGroupMember -Group "Administrators" -Member "RDP"
+              Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
+          } else {
+              (Get-LocalUser -Name "RDP") | Set-LocalUser -Password $securePass
           }
+
+          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
 
       - name: Install Tailscale
         run: |
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
-
           Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
           Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
           Remove-Item $installerPath -Force
 
-      - name: Establish Tailscale Connection
+      - name: Connect to Tailscale
+        env:
+          TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
-          # Bring up Tailscale with the provided auth key and set a unique hostname
-          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
+          $tailscaleExe = "$env:ProgramFiles\Tailscale\tailscale.exe"
+          & $tailscaleExe up --authkey=$env:TAILSCALE_AUTH_KEY --hostname=gh-runner-$env:GITHUB_RUN_ID
 
-          # Wait for Tailscale to assign an IP
-          $tsIP = $null
-          $retries = 0
-          while (-not $tsIP -and $retries -lt 10) {
-              $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
-              Start-Sleep -Seconds 5
-              $retries++
+          # Wait until IP assigned
+          for ($i=0; $i -lt 10; $i++) {
+            $tsIP = & $tailscaleExe ip -4
+            if ($tsIP) { break }
+            Start-Sleep -Seconds 5
           }
+          if (-not $tsIP) { Write-Error "Tailscale IP not found"; exit 1 }
 
-          if (-not $tsIP) {
-              Write-Error "Tailscale IP not assigned. Exiting."
-              exit 1
-          }
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
+          Write-Host "Tailscale IP: $tsIP"
 
-      - name: Verify RDP Accessibility
+      - name: Detect Public IP and Configure Firewall
         run: |
+          # Fetch current public IP
+          $myIP = (Invoke-WebRequest -Uri "https://api.ipify.org" -UseBasicParsing).Content
+          Write-Host "Your current public IP detected: $myIP"
+
+          # Get Tailscale IP for local node
+          $tailscaleExe = "$env:ProgramFiles\Tailscale\tailscale.exe"
+          $tsSelfIP = & $tailscaleExe ip -4
+
+          # Combine allowed IPs
+          $allowedIPs = "$myIP,$tsSelfIP"
+
+          # Remove any previous rules
+          netsh advfirewall firewall delete rule name="RDP-Allow" 2>$null
+          netsh advfirewall firewall delete rule name="RDP-Deny-All" 2>$null
+
+          # Add allow rule for your IP + Tailscale IP
+          netsh advfirewall firewall add rule name="RDP-Allow" dir=in action=allow protocol=TCP localport=3389 remoteip=$allowedIPs profile=any
+
+          # Deny all other IPs
+          netsh advfirewall firewall add rule name="RDP-Deny-All" dir=in action=block protocol=TCP localport=3389 remoteip=any profile=any
+
+          Write-Host "Firewall configured successfully! Allowed: $allowedIPs"
+
+      - name: Display Access Info
+        run: |
+          Write-Host "`n========== RDP INFO =========="
           Write-Host "Tailscale IP: $env:TAILSCALE_IP"
+          Write-Host "$env:RDP_CREDS"
+          Write-Host "=============================="
+          Write-Host "Note: Only your detected public IP and Tailscale are allowed."
 
-          # Test connectivity using Test-NetConnection against the Tailscale IP on port 3389
-          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
-          if (-not $testResult.TcpTestSucceeded) {
-              Write-Error "TCP connection to RDP port 3389 failed"
-              exit 1
-          }
-          Write-Host "TCP connectivity successful!"
-
-      - name: Maintain Connection
+      - name: Keep Alive
         run: |
-          Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Connect via RDP client to: $env:TAILSCALE_IP:3389 (firewall allows from any IP)"
-          Write-Host "Username: $env:RDP_USER"
-          Write-Host "Password: $env:RDP_PASS"
-          Write-Host "==================`n"
-
-          # Keep runner active until near timeout (workflow timeout will handle termination)
-          $endTime = (Get-Date).AddMinutes(170)  # Slightly less than 180 to allow cleanup
-          while ((Get-Date) -lt $endTime) {
-              $remaining = ($endTime - (Get-Date)).TotalMinutes
-              Write-Host "[$(Get-Date)] RDP Active via Tailscale ($([math]::Round($remaining, 1)) minutes remaining) - Cancel workflow to terminate early"
-              Start-Sleep -Seconds 300
+          while ($true) {
+            Write-Host "[$(Get-Date)] RDP Active - press Ctrl+C or cancel workflow to stop"
+            Start-Sleep -Seconds 300
           }
-          Write-Host "Session approaching end - workflow will timeout soon."
