--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Secure RDP with Auto-IP + Tailscale
+name: Secure RDP with Tailscale + IP
 
 on:
   workflow_dispatch:
@@ -9,24 +9,31 @@ jobs:
     timeout-minutes: 3600
 
     steps:
-      - name: Enable RDP
+      - name: Configure Core RDP Settings
         run: |
-          # Enable RDP & basic settings
+          # Enable Remote Desktop and (optionally) disable Network Level Authentication
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
               -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
               -Name "UserAuthentication" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
               -Name "SecurityLayer" -Value 0 -Force
+
+          # Remove any previous firewall rules we may have created earlier
+          netsh advfirewall firewall delete rule name="RDP-OnlyMyDevices" 2>$null
+          netsh advfirewall firewall delete rule name="RDP-Deny-All" 2>$null
+          netsh advfirewall firewall delete rule name="RDP-Tailscale" 2>$null
+
+          # Restart Remote Desktop service to apply settings
           Restart-Service -Name TermService -Force
 
       - name: Create RDP User with Secure Password
         run: |
           Add-Type -AssemblyName System.Security
           $charSet = @{
-              Upper   = [char[]](65..90)
-              Lower   = [char[]](97..122)
-              Number  = [char[]](48..57)
+              Upper   = [char[]](65..90)      # A-Z
+              Lower   = [char[]](97..122)     # a-z
+              Number  = [char[]](48..57)      # 0-9
               Special = ([char[]](33..47) + [char[]](58..64) + [char[]](91..96) + [char[]](123..126))
           }
           $rawPassword = @()
@@ -38,14 +45,24 @@ jobs:
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
 
           if (-not (Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue)) {
-              New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
+              New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires -Description "Temporary RDP user"
               Add-LocalGroupMember -Group "Administrators" -Member "RDP"
               Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
           } else {
-              (Get-LocalUser -Name "RDP") | Set-LocalUser -Password $securePass
+              # If user exists, set password and ensure membership
+              $user = Get-LocalUser -Name "RDP"
+              $user | Set-LocalUser -Password $securePass
+              Add-LocalGroupMember -Group "Administrators" -Member "RDP"
+              Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
           }
 
+          # Store credentials in GITHUB_ENV (only visible in workflow logs)
           echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
+
+          if (-not (Get-LocalUser -Name "RDP")) {
+              Write-Error "User creation failed"
+              exit 1
+          }
 
       - name: Install Tailscale
         run: |
@@ -55,60 +72,125 @@ jobs:
           Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
           Remove-Item $installerPath -Force
 
-      - name: Connect to Tailscale
+      - name: Establish Tailscale Connection
         env:
           TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
-          $tailscaleExe = "$env:ProgramFiles\Tailscale\tailscale.exe"
+          # Helper to find tailscale executable path (two common locations)
+          $possiblePaths = @(
+            "$env:ProgramFiles\Tailscale\tailscale.exe",
+            "$env:ProgramFiles\Tailscale IPN\tailscale.exe"
+          )
+          $tailscaleExe = $possiblePaths | Where-Object { Test-Path $_ } | Select-Object -First 1
+          if (-not $tailscaleExe) {
+              Write-Error "tailscale.exe not found in expected paths: $($possiblePaths -join ', ')"
+              exit 1
+          }
+
+          # Bring up tailscale non-interactively using the auth key and set a recognizable hostname
           & $tailscaleExe up --authkey=$env:TAILSCALE_AUTH_KEY --hostname=gh-runner-$env:GITHUB_RUN_ID
 
-          # Wait until IP assigned
-          for ($i=0; $i -lt 10; $i++) {
-            $tsIP = & $tailscaleExe ip -4
-            if ($tsIP) { break }
-            Start-Sleep -Seconds 5
+          # Wait for Tailscale to assign an IP
+          $tsIP = $null
+          $retries = 0
+          while (-not $tsIP -and $retries -lt 12) {
+              $tsIP = & $tailscaleExe ip -4 2>$null
+              Start-Sleep -Seconds 5
+              $retries++
           }
-          if (-not $tsIP) { Write-Error "Tailscale IP not found"; exit 1 }
 
+          if (-not $tsIP) {
+              Write-Error "Tailscale IP not assigned. Exiting."
+              exit 1
+          }
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
           Write-Host "Tailscale IP: $tsIP"
 
-      - name: Detect Public IP and Configure Firewall
+      - name: Configure Firewall — Allow your public IP + your Tailscale node named 'RDP'
         run: |
-          # Fetch current public IP
-          $myIP = (Invoke-WebRequest -Uri "https://api.ipify.org" -UseBasicParsing).Content
-          Write-Host "Your current public IP detected: $myIP"
+          # Public IP you asked to allow
+          $myPublicIP = "47.15.78.106"
 
-          # Get Tailscale IP for local node
-          $tailscaleExe = "$env:ProgramFiles\Tailscale\tailscale.exe"
-          $tsSelfIP = & $tailscaleExe ip -4
+          # Tailscale device name to allow (change if your device uses another HostName)
+          $deviceName = "RDP"
 
-          # Combine allowed IPs
-          $allowedIPs = "$myIP,$tsSelfIP"
+          # Find tailscale executable path (same logic as earlier)
+          $possiblePaths = @(
+            "$env:ProgramFiles\Tailscale\tailscale.exe",
+            "$env:ProgramFiles\Tailscale IPN\tailscale.exe"
+          )
+          $tailscaleExe = $possiblePaths | Where-Object { Test-Path $_ } | Select-Object -First 1
 
-          # Remove any previous rules
-          netsh advfirewall firewall delete rule name="RDP-Allow" 2>$null
+          $tsIps = @()
+          if ($tailscaleExe) {
+              try {
+                  $statusJson = & $tailscaleExe status --json 2>$null
+                  if ($statusJson) {
+                      $statusObj = $statusJson | ConvertFrom-Json
+                      if ($statusObj.Peer) {
+                          foreach ($p in $statusObj.Peer) {
+                              if ($p.HostName -eq $deviceName) {
+                                  foreach ($ipRaw in $p.TailscaleIPs) {
+                                      $ip = $ipRaw -replace '/\d+$',''
+                                      if ($ip) { $tsIps += $ip }
+                                  }
+                              }
+                          }
+                      }
+                  }
+              } catch {
+                  Write-Warning "Could not run tailscale status: $_"
+              }
+          } else {
+              Write-Warning "tailscale.exe not found; cannot auto-detect Tailscale IP. Only public IP will be allowed."
+          }
+
+          if (-not $tsIps -or $tsIps.Count -eq 0) {
+              Write-Warning "No Tailscale IP found for device '$deviceName'. Only your public IP will be allowed."
+          }
+
+          # Combine allowed IPs: Tailscale IPs first, then public IP
+          $allowedIPs = @()
+          if ($tsIps) { $allowedIPs += $tsIps }
+          $allowedIPs += $myPublicIP
+          $remoteip = $allowedIPs -join ","
+
+          # Remove any previous rule duplicates
+          netsh advfirewall firewall delete rule name="RDP-OnlyMyDevices" 2>$null
           netsh advfirewall firewall delete rule name="RDP-Deny-All" 2>$null
 
-          # Add allow rule for your IP + Tailscale IP
-          netsh advfirewall firewall add rule name="RDP-Allow" dir=in action=allow protocol=TCP localport=3389 remoteip=$allowedIPs profile=any
+          # Add allow rule for only these remote IPs
+          netsh advfirewall firewall add rule name="RDP-OnlyMyDevices" `
+            dir=in action=allow protocol=TCP localport=3389 remoteip=$remoteip profile=any
 
-          # Deny all other IPs
-          netsh advfirewall firewall add rule name="RDP-Deny-All" dir=in action=block protocol=TCP localport=3389 remoteip=any profile=any
+          # Block everyone else explicitly
+          netsh advfirewall firewall add rule name="RDP-Deny-All" `
+            dir=in action=block protocol=TCP localport=3389 remoteip=any profile=any
 
-          Write-Host "Firewall configured successfully! Allowed: $allowedIPs"
+          Write-Host "Firewall configured. Allowed remote IPs: $remoteip"
 
-      - name: Display Access Info
+      - name: Verify RDP Accessibility
         run: |
-          Write-Host "`n========== RDP INFO =========="
-          Write-Host "Tailscale IP: $env:TAILSCALE_IP"
-          Write-Host "$env:RDP_CREDS"
-          Write-Host "=============================="
-          Write-Host "Note: Only your detected public IP and Tailscale are allowed."
+          Write-Host "Tailscale IP (runner): $env:TAILSCALE_IP"
+          Write-Host "Allowed credentials (from env): $env:RDP_CREDS"
 
-      - name: Keep Alive
+          # Quick TCP test to Tailscale IP on port 3389
+          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389 -WarningAction SilentlyContinue
+          if (-not $testResult.TcpTestSucceeded) {
+              Write-Warning "TCP connection to RDP port 3389 failed from runner itself. This may be because RDP service isn't fully ready or firewall changed."
+          } else {
+              Write-Host "TCP connectivity to RDP port is OK from the runner."
+          }
+
+      - name: Maintain Connection (keep runner alive; ctrl+c to cancel)
         run: |
+          Write-Host "`n=== RDP ACCESS INFO ==="
+          Write-Host "Tailscale Address: $env:TAILSCALE_IP"
+          Write-Host "Credentials: $env:RDP_CREDS"
+          Write-Host "========================`n"
+
+          # Keep runner active indefinitely (or until workflow is cancelled)
           while ($true) {
-            Write-Host "[$(Get-Date)] RDP Active - press Ctrl+C or cancel workflow to stop"
-            Start-Sleep -Seconds 300
+              Write-Host "[$(Get-Date -Format o)] RDP Active - use 'Cancel workflow' in Actions to stop"
+              Start-Sleep -Seconds 300
           }
