--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Secure RDP (Allow only 47.15.78.106 + Tailscale)
+name: RDP
 
 on:
   workflow_dispatch:
@@ -9,29 +9,40 @@ jobs:
     timeout-minutes: 3600
 
     steps:
-      - name: Enable RDP and Core Settings
+      - name: Configure Core RDP Settings
         run: |
-          Write-Host "Enabling Remote Desktop..."
+          # Enable Remote Desktop and disable Network Level Authentication (if needed)
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-              -Name "fDenyTSConnections" -Value 0 -Force
-          # Optionally keep NLA disabled if needed (some RDP clients require it)
+                             -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-              -Name "UserAuthentication" -Value 0 -Force
+                             -Name "UserAuthentication" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-              -Name "SecurityLayer" -Value 0 -Force
-          Restart-Service -Name TermService -Force
-          Write-Host "RDP enabled."
+                             -Name "SecurityLayer" -Value 0 -Force
 
-      - name: Create / Update RDP User with Strong Password
-        id: create_user
+          # Remove any existing rule with the same name to avoid duplication
+          netsh advfirewall firewall delete rule name="RDP-Allow-MyIP"
+          netsh advfirewall firewall delete rule name="RDP-Allow-Tailscale"
+
+          # Allow RDP for your public IP
+          netsh advfirewall firewall add rule name="RDP-Allow-MyIP" `
+            dir=in action=allow protocol=TCP localport=3389 remoteip=47.15.78.106
+
+          # Temporarily allow Tailscale range (will be refined later)
+          netsh advfirewall firewall add rule name="RDP-Allow-Tailscale" `
+            dir=in action=allow protocol=TCP localport=3389 remoteip=100.64.0.0/10
+
+          # Restart Remote Desktop service to ensure changes take effect
+          Restart-Service -Name TermService -Force
+
+      - name: Create RDP User with Secure Password
         run: |
-          Write-Host "Creating local user 'RDP' with a random strong password..."
           Add-Type -AssemblyName System.Security
           $charSet = @{
               Upper   = [char[]](65..90)
               Lower   = [char[]](97..122)
               Number  = [char[]](48..57)
-              Special = ([char[]](33..47) + [char[]](58..64) + [char[]](91..96) + [char[]](123..126))
+              Special = ([char[]](33..47) + [char[]](58..64) +
+                         [char[]](91..96) + [char[]](123..126))
           }
           $rawPassword = @()
           $rawPassword += $charSet.Upper | Get-Random -Count 4
@@ -41,167 +52,69 @@ jobs:
           $password = -join ($rawPassword | Sort-Object { Get-Random })
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
 
-          if (-not (Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue)) {
-              New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires -Description "Temporary RDP user created by workflow"
-              Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
-              Add-LocalGroupMember -Group "Administrators" -Member "RDP"
-              Write-Host "User 'RDP' created."
-          } else {
-              Write-Host "User 'RDP' exists. Updating password and ensuring group membership..."
-              (Get-LocalUser -Name "RDP") | Set-LocalUser -Password $securePass
-              Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP" -ErrorAction SilentlyContinue
-              Add-LocalGroupMember -Group "Administrators" -Member "RDP" -ErrorAction SilentlyContinue
+          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
+          Add-LocalGroupMember -Group "Administrators" -Member "RDP"
+          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
+
+          echo "RDP_PASSWORD=$password" >> $env:GITHUB_ENV
+
+          if (-not (Get-LocalUser -Name "RDP")) {
+              Write-Error "User creation failed"
+              exit 1
           }
 
-          # Save credentials as environment variable for later steps (visible in workflow log)
-          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
-          Write-Host "RDP credentials stored in GITHUB_ENV (visible in logs)."
-
-      - name: Install Tailscale (optional but attempted)
+      - name: Install Tailscale
         run: |
-          Write-Host "Installing Tailscale..."
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
-          try {
-              Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath -UseBasicParsing -TimeoutSec 60
-              Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
-              Remove-Item $installerPath -Force
-              Write-Host "Tailscale installer finished (if download succeeded)."
-          } catch {
-              Write-Warning "Tailscale install failed or download failed: $_"
-          }
+          Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
+          Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
+          Remove-Item $installerPath -Force
 
-      - name: Attempt to bring up Tailscale (if auth key provided)
-        if: ${{ secrets.TAILSCALE_AUTH_KEY != '' }}
-        env:
-          TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
+      - name: Establish Tailscale Connection
         run: |
-          # Try common paths for tailscale.exe
-          $possiblePaths = @(
-            "$env:ProgramFiles\Tailscale\tailscale.exe",
-            "$env:ProgramFiles\Tailscale IPN\tailscale.exe"
-          )
-          $tailscaleExe = $possiblePaths | Where-Object { Test-Path $_ } | Select-Object -First 1
-          if (-not $tailscaleExe) {
-              Write-Warning "tailscale.exe not found; skipping tailscale up."
-              exit 0
-          }
-          Write-Host "Bringing Tailscale up using provided auth key (non-interactive)..."
-          & $tailscaleExe up --authkey=$env:TAILSCALE_AUTH_KEY --hostname=gh-runner-$env:GITHUB_RUN_ID 2>&1 | Write-Host
-          # Wait a bit for IP to appear
-          Start-Sleep -Seconds 6
-          $tsIP = & $tailscaleExe ip -4 2>$null
-          if ($tsIP) {
-              Write-Host "Tailscale IP detected: $tsIP"
-              echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-          } else {
-              Write-Warning "No Tailscale IP assigned yet (Tailscale up may have failed or is still provisioning)."
-          }
-
-      - name: Configure Firewall (Allow only 47.15.78.106 + Tailscale if present)
-        run: |
-          Write-Host "Configuring firewall to allow only your static IP and Tailscale (if present)..."
-
-          # Your trusted static public IP
-          $staticIP = "47.15.78.106"
-
-          # Detect runner public IP (for your information)
-          try {
-              $public = (Invoke-WebRequest -Uri "https://api.ipify.org" -UseBasicParsing -TimeoutSec 10).Content.Trim()
-          } catch {
-              Write-Warning "Primary IP check failed, trying backup..."
-              try {
-                  $public = (Invoke-WebRequest -Uri "https://ifconfig.me/ip" -UseBasicParsing -TimeoutSec 10).Content.Trim()
-              } catch {
-                  $public = "UNKNOWN"
-              }
-          }
-          Write-Host "Runner public IP (detected): $public"
-
-          # Try to get Tailscale IP assigned to this runner (if any)
-          $possiblePaths = @(
-            "$env:ProgramFiles\Tailscale\tailscale.exe",
-            "$env:ProgramFiles\Tailscale IPN\tailscale.exe"
-          )
-          $tailscaleExe = $possiblePaths | Where-Object { Test-Path $_ } | Select-Object -First 1
+          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
 
           $tsIP = $null
-          if ($tailscaleExe) {
-              try {
-                  $tsIP = & $tailscaleExe ip -4 2>$null
-              } catch {
-                  Write-Warning "Failed to query tailscale IP: $_"
-              }
+          $retries = 0
+          while (-not $tsIP -and $retries -lt 10) {
+              $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
+              Start-Sleep -Seconds 5
+              $retries++
           }
 
-          if ($tsIP) {
-              Write-Host "Detected Tailscale IP for runner: $tsIP"
-          } else {
-              Write-Host "No Tailscale IP detected; firewall will still allow static IP $staticIP."
+          if (-not $tsIP) {
+              Write-Error "Tailscale IP not assigned. Exiting."
+              exit 1
           }
 
-          # Combine allowed IPs: static IP always allowed; include Tailscale IP only if present
-          $allowed = @($staticIP)
-          if ($tsIP) { $allowed += $tsIP }
-          $remoteList = $allowed -join ","
+          echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
 
-          Write-Host "Allowed remote IPs for RDP: $remoteList"
+          # Update firewall to allow only Tailscale IP specifically
+          netsh advfirewall firewall delete rule name="RDP-Allow-Tailscale"
+          netsh advfirewall firewall add rule name="RDP-Allow-Tailscale" `
+            dir=in action=allow protocol=TCP localport=3389 remoteip=$tsIP
 
-          # Remove existing rules from previous runs (avoid duplicates)
-          netsh advfirewall firewall delete rule name="RDP-Allow" 2>$null
-          netsh advfirewall firewall delete rule name="RDP-Deny-All" 2>$null
-
-          # Add allow rule for specific IPs (works even if tailscale not running)
-          netsh advfirewall firewall add rule name="RDP-Allow" dir=in action=allow protocol=TCP localport=3389 remoteip=$remoteList profile=any
-
-          # Add deny-all for everyone else (protects from public scans)
-          netsh advfirewall firewall add rule name="RDP-Deny-All" dir=in action=block protocol=TCP localport=3389 remoteip=any profile=any
-
-          Write-Host "Firewall configured."
-
-      - name: Show Connection Info (public IP, Tailscale IP if any, credentials)
+      - name: Verify RDP Accessibility
         run: |
-          Write-Host "`n===== Connection Info ====="
-          # Detected public IP of the runner (not required for connecting; info only)
-          try {
-              $runnerPublic = (Invoke-WebRequest -Uri "https://api.ipify.org" -UseBasicParsing -TimeoutSec 10).Content.Trim()
-          } catch {
-              $runnerPublic = "UNKNOWN"
+          Write-Host "Tailscale IP: $env:TAILSCALE_IP"
+          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
+          if (-not $testResult.TcpTestSucceeded) {
+              Write-Error "TCP connection to RDP port 3389 failed"
+              exit 1
           }
-          Write-Host "Runner public IP: $runnerPublic"
+          Write-Host "TCP connectivity successful!"
 
-          # Tailscale IP (if set earlier in env)
-          if ($env:TAILSCALE_IP) {
-              Write-Host "Runner Tailscale IP: $env:TAILSCALE_IP"
-          } else {
-              # Try to detect now
-              $possiblePaths = @(
-                "$env:ProgramFiles\Tailscale\tailscale.exe",
-                "$env:ProgramFiles\Tailscale IPN\tailscale.exe"
-              )
-              $tailscaleExe = $possiblePaths | Where-Object { Test-Path $_ } | Select-Object -First 1
-              if ($tailscaleExe) {
-                  $nowIP = & $tailscaleExe ip -4 2>$null
-                  if ($nowIP) { Write-Host "Runner Tailscale IP: $nowIP" }
-                  else { Write-Host "Runner Tailscale IP: (none)" }
-              } else {
-                  Write-Host "Tailscale not installed or not found."
-              }
-          }
-
-          # Print credentials (they were saved to GITHUB_ENV earlier)
-          Write-Host "RDP credentials (also in GITHUB_ENV):"
-          if ($env:RDP_CREDS) {
-              Write-Host $env:RDP_CREDS
-          } else {
-              Write-Host "(Credentials not found in environment - user creation may have failed.)"
-          }
-          Write-Host "============================`n"
-
-      - name: Keep Runner Alive (Use Cancel workflow to stop)
+      - name: Maintain Connection
         run: |
-          Write-Host "Runner will stay alive. Cancel the workflow from Actions to stop the RDP server."
+          Write-Host "`n=== RDP ACCESS ==="
+          Write-Host "Public IP Allowed: 47.15.78.106"
+          Write-Host "Tailscale IP: $env:TAILSCALE_IP"
+          Write-Host "Username: RDP"
+          Write-Host "Password: $env:RDP_PASSWORD"
+          Write-Host "==================`n"
+
           while ($true) {
-              Write-Host "[$(Get-Date -Format o)] RDP active..."
+              Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
               Start-Sleep -Seconds 300
           }
