--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,112 +1,67 @@
-name: RDP
-
+name: Cloudflare-RDP
 on:
   workflow_dispatch:
 
 jobs:
-  secure-rdp:
+  rdp-access:
     runs-on: windows-latest
     timeout-minutes: 3600
 
     steps:
       - name: Enable and Configure RDP
         run: |
-          # Enable Remote Desktop
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-                           -Name "fDenyTSConnections" -Value 0 -Force
-          # Disable Network Level Authentication (optional)
+            -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                           -Name "UserAuthentication" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                           -Name "SecurityLayer" -Value 0 -Force
-
-          # Clean up old firewall rules
-          netsh advfirewall firewall delete rule name="RDP-Allow-Phone"
-          netsh advfirewall firewall delete rule name="RDP-Allow-Tailscale"
-
-          # Allow RDP only from your phone's IP
-          netsh advfirewall firewall add rule name="RDP-Allow-Phone" `
-            dir=in action=allow protocol=TCP localport=3389 remoteip=47.15.78.106
-
-          # Temporarily allow Tailscale subnet until real IP is known
-          netsh advfirewall firewall add rule name="RDP-Allow-Tailscale" `
-            dir=in action=allow protocol=TCP localport=3389 remoteip=100.64.0.0/10
-
-          Restart-Service -Name TermService -Force
+            -Name "UserAuthentication" -Value 0 -Force
+          Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
 
       - name: Create Secure RDP User
         run: |
           Add-Type -AssemblyName System.Security
-          $chars = @{
-            Upper = [char[]](65..90)
-            Lower = [char[]](97..122)
-            Number = [char[]](48..57)
-            Special = ([char[]](33..47) + [char[]](58..64) + [char[]](91..96) + [char[]](123..126))
-          }
-
-          $raw = @()
-          $raw += $chars.Upper | Get-Random -Count 4
-          $raw += $chars.Lower | Get-Random -Count 4
-          $raw += $chars.Number | Get-Random -Count 4
-          $raw += $chars.Special | Get-Random -Count 4
-          $password = -join ($raw | Sort-Object { Get-Random })
-          $secure = ConvertTo-SecureString $password -AsPlainText -Force
-
-          New-LocalUser -Name "RDP" -Password $secure -AccountNeverExpires
+          $chars = ([char[]](33..126))
+          $password = -join (1..15 | ForEach-Object { $chars | Get-Random })
+          $securePass = ConvertTo-SecureString $password -AsPlainText -Force
+          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
           Add-LocalGroupMember -Group "Administrators" -Member "RDP"
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
+          echo "RDP_USER=RDP" >> $env:GITHUB_ENV
+          echo "RDP_PASS=$password" >> $env:GITHUB_ENV
+          Write-Host "Created RDP User: RDP"
+          Write-Host "Password: $password"
 
-          echo "RDP_PASSWORD=$password" >> $env:GITHUB_ENV
-
-      - name: Install Tailscale
+      - name: Install Cloudflared
         run: |
-          $url = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
-          $file = "$env:TEMP\tailscale.msi"
-          Invoke-WebRequest -Uri $url -OutFile $file
-          Start-Process msiexec.exe -ArgumentList "/i `"$file`" /quiet /norestart" -Wait
-          Remove-Item $file -Force
+          Invoke-WebRequest https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-windows-amd64.exe -OutFile cloudflared.exe
+          Move-Item cloudflared.exe "$env:ProgramFiles\cloudflared.exe"
 
-      - name: Connect to Tailscale
+      - name: Start Cloudflare Tunnel
+        env:
+          CLOUDFLARED_AUTH_TOKEN: ${{ secrets.CLOUDFLARED_AUTH_TOKEN }}
         run: |
-          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
+          Start-Process -NoNewWindow -FilePath "$env:ProgramFiles\cloudflared.exe" `
+            -ArgumentList "service", "install", "--token", $env:CLOUDFLARED_AUTH_TOKEN
+          Start-Sleep -Seconds 10
+          Start-Process -NoNewWindow -FilePath "$env:ProgramFiles\cloudflared.exe" `
+            -ArgumentList "tunnel", "--no-autoupdate", "run"
+          Start-Sleep -Seconds 15
+          Write-Host "✅ Cloudflare Tunnel Started for rdp.crossxcel.com"
 
-          $tsIP = $null
-          for ($i=0; $i -lt 10; $i++) {
-            $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
-            if ($tsIP) { break }
-            Start-Sleep -Seconds 5
-          }
-
-          if (-not $tsIP) {
-            Write-Error "Tailscale IP not assigned"
-            exit 1
-          }
-
-          echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-
-          # Update firewall rule to only allow this specific Tailscale IP
-          netsh advfirewall firewall delete rule name="RDP-Allow-Tailscale"
-          netsh advfirewall firewall add rule name="RDP-Allow-Tailscale" `
-            dir=in action=allow protocol=TCP localport=3389 remoteip=$tsIP
-
-      - name: Show Connection Info
+      - name: Display Connection Info
         run: |
           Write-Host ""
-          Write-Host "===== RDP ACCESS DETAILS ====="
-          Write-Host "Tailscale IP : $env:TAILSCALE_IP"
-          Write-Host "Phone IP     : 47.15.78.106"
-          Write-Host "Username     : RDP"
-          Write-Host "Password     : $env:RDP_PASSWORD"
-          Write-Host "=============================="
-          Write-Host ""
-          Write-Host "To connect via Remote Desktop:"
-          Write-Host "→ Enter IP:  $env:TAILSCALE_IP  (if using Tailscale VPN)"
-          Write-Host "→ OR Enter IP:  47.15.78.106   (if connecting directly from your phone's public IP)"
+          Write-Host "==============================="
+          Write-Host "🌐 RDP via Cloudflare Active!"
+          Write-Host "Connect using:"
+          Write-Host "Host: rdp.crossxcel.com"
+          Write-Host "Username: $env:RDP_USER"
+          Write-Host "Password: $env:RDP_PASS"
+          Write-Host "==============================="
           Write-Host ""
 
-      - name: Keep Session Active
+      - name: Keep RDP Alive
         run: |
           while ($true) {
-            Write-Host "[$(Get-Date)] RDP running and accessible..."
+            Write-Host "[$(Get-Date)] RDP session active..."
             Start-Sleep -Seconds 300
           }
